external-crates/move/crates/move-compiler/tests/move_check/verification/cross_module_invalid.exp
error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/cross_module_invalid.move:10:7
   │
10 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/cross_module_invalid.move:13:7
   │
13 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/cross_module_invalid.move:16:7
   │
16 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

